added redis for dataprotection key (for SKIP)

--- a/Geonorge.Download/Components/App.razor
+++ b/Geonorge.Download/Components/App.razor
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />    
-    <link rel="stylesheet" href="Content/bower_components/site.css" />
+    <link rel="stylesheet" href="Content/site.css" />
     <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/main.css" />
     <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/vendor.css" />    
     <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/vendorfonts.css" />
