Fjernet gamle auth-klasser. Lagt til pages for machineaccounts.

--- a/Geonorge.Download/Components/App.razor
+++ b/Geonorge.Download/Components/App.razor
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />    
     <link rel="stylesheet" href="Content/site.css" />
     <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/main.css" />
-    <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/vendor.css" />    
+    <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/vendor.css" />
     <link rel="stylesheet" href="Content/bower_components/kartverket-felleskomponenter/assets/css/vendorfonts.css" />
     @* <link rel="stylesheet" href="app.css" /> *@
     @* <link rel="stylesheet" href="Geonorge.Download.styles.css" /> *@
@@ -21,6 +21,9 @@
     <script src="_framework/blazor.web.js"></script>
     <script type="module" src="lib/geonorge/MainNavigation.js"></script>
     <script type="module" src="lib/geonorge/GeonorgeFooter.js"></script>
+    <script src="lib/geonorge/GnDialog.js"></script>
+    <script type="module" src="js/gnDialogEvents.js"></script>
+
 </body>
 
 </html>
