--- a/Geonorge.Download/Components/_Imports.razor
+++ b/Geonorge.Download/Components/_Imports.razor
@@ -3,9 +3,16 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Geonorge.Download
 @using Geonorge.Download.Components
+@using Geonorge.Download.Components.Auth
+@using Geonorge.Download.Components.Shared
+@using Geonorge.AuthLib.Common
+@using Geonorge.Download.Models
+@using Geonorge.Download.Services
+@using Geonorge.Download.Services.Interfaces
