Fixed localization, notfound and unauthorized pages. cleanup on classes

--- a/Geonorge.Download/Components/Error/NotFound.razor
+++ b/Geonorge.Download/Components/Error/NotFound.razor
@@ -1,49 +1,50 @@
-﻿@* @page "/error/not-found"
+﻿@page "/error/not-found"
 @using Geonorge.Download.Resources
-@using Geonorge.Download.Helpers
-@inject Microsoft.Extensions.Options.IOptions<AppLinksOptions> AppLinks
+@inject IConfiguration Configuration
+@inject Microsoft.Extensions.Localization.IStringLocalizer<UI> Localizer
 @inject NavigationManager Nav
 
 <div class="container page-not-found-container">
-    <h1>@UI.NotFoundText</h1>
-    <span class="separator-lg start-page-separator-lg"></span>
 
-    <div class="illustration col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="illustration-text col-xs-12">
+    <div class="illustration col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+        <div class="illustration-text col-12">
             <p>@UI.NotFoundText</p>
         </div>
 
         <img src="@AssetUrl("Static/img/404_illustration-01.svg")"
-             alt="404 illustration" />
+             alt="404 illustration" class="img-fluid mb-4" />
 
-        <div class="help-links">
-            <div class="col-xs-4">
-                <a href="@HomeUrl()">
-                    <div class="help-links-icon-container">
+        <div class="help-links row text-center g-3 g-sm-4 mt-5">
+            <div class="col-12 col-sm-4 mt-5">
+                <a class="d-block position-relative p-1 text-decoration-none" href="@HomeUrl()">
+                    <div class="help-links-icon-container mx-auto mb-1">
                         <img src="@AssetUrl("Static/img/404_house_icon_968c83_35px-01.svg")"
                              class="icon-house" alt="@UI.Home" />
                     </div>
-                    <p>@UI.Home</p>
+                    <p class="m-0">@UI.Home</p>
+                    <span class="stretched-link" aria-hidden="true"></span>
                 </a>
             </div>
 
-            <div class="col-xs-4">
-                <a href="mailto:@(AppLinks.Value.WebmasterEmail ?? "webmaster@geonorge.no")">
-                    <div class="help-links-icon-container">
+            <div class="col-12 col-sm-4 mt-5">
+                <a class="d-block position-relative p-1 text-decoration-none" href="mailto:@Configuration["WebmasterEmail"]">
+                    <div class="help-links-icon-container mx-auto mb-1">
                         <img src="@AssetUrl("Static/img/404_envelope_icon_968c83_30px-01.svg")"
                              class="icon-envelope" alt="@UI.ContactUs" />
                     </div>
-                    <p>@UI.ContactUs</p>
+                    <p class="m-0">@UI.ContactUs</p>
+                    <span class="stretched-link" aria-hidden="true"></span>
                 </a>
             </div>
 
-            <div class="col-xs-4">
-                <a href="@SearchUrl()">
-                    <div class="help-links-icon-container">
+            <div class="col-12 col-sm-4 mt-5">
+                <a class="d-block position-relative p-1 text-decoration-none" href="@SearchUrl()">
+                    <div class="help-links-icon-container mx-auto mb-1">
                         <img src="@AssetUrl("Static/img/404_magnifying_icon_968c83_34px-01.svg")"
                              class="icon-magnifying-glass" alt="@UI.SearchFor" />
                     </div>
-                    <p>@UI.SearchFor</p>
+                    <p class="m-0">@UI.SearchFor</p>
+                    <span class="stretched-link" aria-hidden="true"></span>
                 </a>
             </div>
         </div>
@@ -51,20 +52,14 @@
 </div>
 
 @code {
-    // Prefer configured Geonorge base URL; fall back to app's base
-    private string BaseGeonorgeUrl =>
-        EnsureTrailingSlash(AppLinks.Value.GeonorgeUrl) ?? EnsureTrailingSlash(Nav.BaseUri);
-
     private string AssetUrl(string relative) =>
-        CombineUrl(BaseGeonorgeUrl, relative);
+        CombineUrl(EnsureTrailingSlash(Configuration["GeonorgeUrl"])!, relative);
 
-    private string HomeUrl() =>
-        "/"; // If you actually mean Geonorge homepage instead of app root, use BaseGeonorgeUrl
+    private string HomeUrl() => "/";
 
     private string SearchUrl()
     {
-        // You had "~/Search/"; if that lives under Kartkatalogen, use the configured URL.
-        var kk = EnsureTrailingSlash(AppLinks.Value.KartkatalogenUrl);
+        var kk = EnsureTrailingSlash(Configuration["KartkatalogenUrl"]);
         return kk is not null ? CombineUrl(kk, "search") : "/search";
     }
 
@@ -74,4 +69,3 @@
     private static string CombineUrl(string baseUrl, string relative)
         => baseUrl.EndsWith("/") ? baseUrl + relative.TrimStart('/') : baseUrl + "/" + relative.TrimStart('/');
 }
- *@
