--- a/Geonorge.Download/Components/Pages/MachineAccounts/MachineAccountsDetails.razor
+++ b/Geonorge.Download/Components/Pages/MachineAccounts/MachineAccountsDetails.razor
@@ -27,7 +27,7 @@ else if (_model is null)
         Could not find a machine account with username “@Username”.
     </div>
     <p class="mt-3">
-        <NavLink class="btn" href="/machine-accounts">Back to list</NavLink>
+        <NavLink class="btn" href="/machineaccounts">Back to list</NavLink>
     </p>
 }
 else
@@ -36,7 +36,6 @@ else
     <div class="mt-3">
         <h4>MachineAccount</h4>
         <hr />
-        <!-- Bootstrap-flavored <dl> similar to MVC's DisplayFor layout -->
         <dl class="row">
             <dt class="col-sm-3">Brukernavn</dt>
             <dd class="col-sm-9">@_model.Username</dd>
@@ -62,7 +61,6 @@ else
             <dd class="col-sm-9">
                 @if (_model.Roles is { Count: > 0 })
                 {
-                    <!-- Show as chips; fall back to comma-joined text if preferred -->
                     <ul class="list-inline m-0">
                         @foreach (var r in _model.Roles)
                         {
@@ -110,7 +108,6 @@ else
                 return;
             }
 
-            // You can decide whether Username is case-sensitive; normalize if needed
             _model = await MachineAccountService.GetByUsernameAsync(Username, _loadCts.Token);
         }
         catch (OperationCanceledException)
