--- a/Geonorge.Download/Components/Pages/Home.razor
+++ b/Geonorge.Download/Components/Pages/Home.razor
@@ -1,13 +1,20 @@
 ﻿@page "/"
-@* @rendermode InteractiveServer *@
+@rendermode InteractiveServer
 
 <PageTitle>Hjem</PageTitle>
 
 <section class="heading">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-9">
             <h1>Nedlasting API</h1>
         </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="col-sm-3 mt-5">
+                    <a class="btn" href=@($"/machineaccounts")>Maskinkontoer</a>
+                </div>                
+            </Authorized>
+        </AuthorizeView>
         <div class="col-sm-12">
             <span class="separator-lg"></span>
         </div>
@@ -15,7 +22,7 @@
 </section>
 
 <p class="lead" style="font-size:18px">
-    Se <a href="/Help">dokumentasjon for nedlasting API</a>
+    Se <a href="/help">dokumentasjon for nedlasting API</a> og <a href="/swagger">swagger (API-utforsker)</a>
 </p>
 
 <h2>Versjonshistorikk</h2>
