--- a/Geonorge.Download/Components/Pages/Home.razor
+++ b/Geonorge.Download/Components/Pages/Home.razor
@@ -22,7 +22,7 @@
 </section>
 
 <p class="lead" style="font-size:18px">
-    Se <a href="/help">dokumentasjon for nedlasting API</a> og <a href="/swagger">swagger (API-utforsker)</a>
+    Se <a href="/help">dokumentasjon for nedlasting API</a>
 </p>
 
 <h2>Versjonshistorikk</h2>
